// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Segmented > Segmented baseVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-2de7982e=""
>
  <div
    class="example-segmented"
    data-v-2de7982e=""
  >
    <div
      class="t-segmented"
      data-v-2de7982e=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        
      </div>
    </div>
  </div>
  <div
    class="example-segmented"
    data-v-2de7982e=""
  >
    <div
      class="t-segmented"
      data-v-2de7982e=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Segmented > Segmented blockVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-7b7a58bb=""
>
  <div
    class="example-segmented"
    data-v-7b7a58bb=""
  >
    <div
      class="t-segmented t-segmented--block"
      data-v-7b7a58bb=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        
      </div>
    </div>
  </div>
  <div
    class="example-segmented"
    data-v-7b7a58bb=""
  >
    <div
      class="t-segmented t-segmented--block"
      data-v-7b7a58bb=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2"
        >
          <div
            class="t-segmented__item-inner"
          >
            <span
              class="t-segmented__item-icon"
            >
              <svg
                class="t-icon t-icon-home"
                fill="none"
                height="1em"
                style="fill: none;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g
                  id="home"
                >
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    fill="transparent"
                    id="fill1"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    fill="transparent"
                    id="fill2"
                  />
                  <path
                    d="M9 14H15V21H9V14Z"
                    id="stroke2"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                  <path
                    d="M3 10L12 2.5L21 10V21H3V10Z"
                    id="stroke1"
                    stroke="currentColor"
                    stroke-linecap="square"
                    stroke-width="2"
                  />
                </g>
              </svg>
            </span>
            <span
              class="t-segmented__item-label"
            >
              选项
            </span>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Segmented > Segmented disabledVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
  data-v-3ddafa08=""
>
  <div
    class="example-segmented"
    data-v-3ddafa08=""
  >
    <div
      class="t-segmented"
      data-v-3ddafa08=""
    >
      <div
        class="t-segmented__group"
      >
        <div
          class="t-segmented__thumb"
        />
        
        <div
          class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              选中
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-1"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              默认
            </span>
          </div>
        </div>
        <div
          class="t-segmented__item t-segmented-item-2 t-segmented__item--disabled"
        >
          <div
            class="t-segmented__item-inner"
          >
            <!---->
            <span
              class="t-segmented__item-label"
            >
              禁用
            </span>
          </div>
        </div>
        
      </div>
    </div>
  </div>
</div>
`;

exports[`Segmented > Segmented mobileVue demo works fine 1`] = `
<div
  class="tdesign-mobile-demo"
>
  <h1
    class="title"
  >
    Segmented 分段控制器
  </h1>
  <p
    class="summary"
  >
    用于切换不同的内容区域，一次只显示一个区域的内容。
  </p>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        01 组件类型
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        基础
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
        data-v-2de7982e=""
      >
        <div
          class="example-segmented"
          data-v-2de7982e=""
        >
          <div
            class="t-segmented"
            data-v-2de7982e=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          class="example-segmented"
          data-v-2de7982e=""
        >
          <div
            class="t-segmented"
            data-v-2de7982e=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block tdesign-mobile-demo-block_notitle"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <!--v-if-->
      <p
        class="tdesign-mobile-demo-block__summary tdesign-mobile-demo-block_subtitle"
      >
        自适应宽度
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
        data-v-7b7a58bb=""
      >
        <div
          class="example-segmented"
          data-v-7b7a58bb=""
        >
          <div
            class="t-segmented t-segmented--block"
            data-v-7b7a58bb=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
        <div
          class="example-segmented"
          data-v-7b7a58bb=""
        >
          <div
            class="t-segmented t-segmented--block"
            data-v-7b7a58bb=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <span
                    class="t-segmented__item-icon"
                  >
                    <svg
                      class="t-icon t-icon-home"
                      fill="none"
                      height="1em"
                      style="fill: none;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g
                        id="home"
                      >
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          fill="transparent"
                          id="fill1"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          fill="transparent"
                          id="fill2"
                        />
                        <path
                          d="M9 14H15V21H9V14Z"
                          id="stroke2"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                        <path
                          d="M3 10L12 2.5L21 10V21H3V10Z"
                          id="stroke1"
                          stroke="currentColor"
                          stroke-linecap="square"
                          stroke-width="2"
                        />
                      </g>
                    </svg>
                  </span>
                  <span
                    class="t-segmented__item-label"
                  >
                    选项
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
  <div
    class="tdesign-mobile-demo-block"
  >
    <div
      class="tdesign-mobile-demo-block__header"
    >
      <h2
        class="tdesign-mobile-demo-block__title"
      >
        02 组件状态
      </h2>
      <p
        class="tdesign-mobile-demo-block__summary"
      >
        控制器状态
      </p>
    </div>
    <div
      class="tdesign-mobile-demo-block__slot"
    >
      
      <div
        class="tdesign-mobile-demo"
        data-v-3ddafa08=""
      >
        <div
          class="example-segmented"
          data-v-3ddafa08=""
        >
          <div
            class="t-segmented"
            data-v-3ddafa08=""
          >
            <div
              class="t-segmented__group"
            >
              <div
                class="t-segmented__thumb"
              />
              
              <div
                class="t-segmented__item t-segmented-item-0 t-segmented__item--active"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    选中
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-1"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    默认
                  </span>
                </div>
              </div>
              <div
                class="t-segmented__item t-segmented-item-2 t-segmented__item--disabled"
              >
                <div
                  class="t-segmented__item-inner"
                >
                  <!---->
                  <span
                    class="t-segmented__item-label"
                  >
                    禁用
                  </span>
                </div>
              </div>
              
            </div>
          </div>
        </div>
      </div>
      
    </div>
  </div>
</div>
`;
